--- a/rootdir/etc/init.montana.rc
+++ b/rootdir/etc/init.montana.rc
@@ -35,3 +35,6 @@ on property:ro.boot.ram=2GB
 
 on property:ro.boot.ram=3GB
     write /sys/block/zram0/disksize 805306368
+
+on property:sys.listeners.registered=*
+    setprop vendor.sys.keymaster.loaded ${sys.listeners.registered}
