montana: add spectrum support

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -25,8 +25,9 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-import /system/vendor/etc/init/hw/init.mmi.rc
-import /system/vendor/etc/init/hw/init.montana.rc
+import /vendor/etc/init/hw/init.mmi.rc
+import /vendor/etc/init/hw/init.montana.rc
+import /vendor/etc/init/hw/init.spectrum.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
