--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -21,7 +21,8 @@
     <application
         android:allowBackup="true"
         android:label="@string/moto_actions_title"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_gesture"
+        android:summary="@string/moto_actions_summary"
         android:persistent="true">
 
         <provider
@@ -63,7 +64,7 @@
         <activity
             android:name=".ActionsPreferenceActivity"
             android:label="@string/moto_actions_title"
-            android:summary="@string/device_gestures_summary"
+            android:summary="@string/moto_actions_summary"
             android:theme="@style/MotoActions">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
