--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -91,6 +91,15 @@
             android:theme="@style/MotoActions">
         </activity>
 
+        <activity
+            android:name="com.moto.actions.dirac.DiracActivity"
+            android:label="@string/dirac_title"
+	    android:theme="@style/MotoActions">
+            <intent-filter>
+                 <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
