montana: enable system as root
Signed-off-by: JarlPenguin <jarlpenguin@outlook.com>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -2,6 +2,7 @@ import init.target.recovery.rc
 
 on fs
     symlink /dev/block/bootdevice/by-name/oem /dev/block/bootdevice/by-name/vendor
+    export ANDROID_ROOT /system_root
 
 # separate copy needed to use /sbin/linker instead of /system/bin/linker
 service sbinqseecomd /sbin/qseecomd
